# kiro-skills

./: .gitignore  CONTEXT.md  README.md  implementation-plan.md  pyproject.toml
.kiro/: corrections.md  review-findings.md
.kiro/steering/: project-config.md
agents/: implementer-prompt.md  implementer.json  merger-prompt.md  merger.json  pr-design-conformance-prompt.md  pr-design-conformance.json  pr-security-prompt.md  pr-security.json  pr-test-quality-prompt.md  pr-test-quality.json  reviewer-prompt.md  reviewer.json  skill-converter.json
docs/: claude-skills-analysis.md  process-flow.md  skill-linkages.md  wsl-setup.md
docs/research/: security-review-standards.md  testing-quality-standards.md
notes/: pr-review-todos.md
sandcastle/: Dockerfile  main.template.ts
skills/ask-ted/: SKILL.md
skills/caveman-commit/: SKILL.md
skills/code-review/: SKILL.md
skills/convert-claude-skill/: MAPPING.md  SKILL.md
skills/deploy/: SKILL.md
skills/diagnose/: SKILL.md
skills/domain-modeling/: SKILL.md
skills/grill-me/: SKILL.md
skills/grill-with-docs/: ADR-FORMAT.md  CONTEXT-FORMAT.md  SKILL.md
skills/handoff/: SKILL.md
skills/language-guide/: SKILL.md  (+2 more)
steering/: caveman.md  corrections.md
tests/: test_agent.py  test_cli.py  test_config.py  test_executor.py  test_executor_merge.py  test_git.py  test_github_fetch.py  test_github_mutations.py  test_hooks.py  test_pipeline.py  test_planner.py  test_reporter.py
wave_runner/: agent.py  cli.py  config.py  debug.py  executor.py  git.py  github.py  hooks.py  models.py  pipeline.py  planner.py  reporter.py
(+39 files in other folders)
