[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wave-runner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
wave-runner = "wave_runner.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
